force-app/main/default/objects/Key_Resources_Config__mdt/Key_Resources_Config__mdt.object-meta.xml
<CustomObject>
    <description>Configuration to populate Key Resources on Article details screen in Community</description>
    <label>Key Resources Config</label>
    <pluralLabel>Key Resources Configs</pluralLabel>
</CustomObject>