force-app/main/default/objects/Key_Resources_Config__mdt/fields/KA_URL__c.field-meta.xml
<CustomField>
    <fullName>KA_URL__c</fullName>
    <description>Relative URL of Knowledge Article</description>
    <inlineHelpText>Relative URL of Knowledge Article</inlineHelpText>
    <label>KA URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>