force-app/main/default/objects/Key_Resources_Config__mdt/fields/Sort_Order__c.field-meta.xml
<CustomField>
    <fullName>Sort_Order__c</fullName>
    <description>Display Sort order for Resources within component</description>
    <inlineHelpText>Display Sort order for Resources within component</inlineHelpText>
    <label>Sort Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>