force-app/main/default/objects/Key_Resources_Config__mdt/fields/Title__c.field-meta.xml
<CustomField>
    <fullName>Title__c</fullName>
    <description>Title displayed for the KA. Not using label field due to 40 char limit</description>
    <inlineHelpText>Title displayed for the KA.</inlineHelpText>
    <label>Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>