force-app/main/default/objects/Key_Resources_Config__mdt/listViews/Details.listView-meta.xml
<ListView>
    <fullName>Details</fullName>
    <columns>MasterLabel</columns>
    <columns>Sort_Order__c</columns>
    <columns>KA_URL__c</columns>
    <columns>Title__c</columns>
    <columns>DeveloperName</columns>
    <filterScope>Everything</filterScope>
    <label>Details</label>
</ListView>